Сделал страницы: UserPage, PostsPage. Сделал компоненты: PostCard, ButtonGoBack, NotFound.

--- a/src/components/Buttons/ButtonDetail/ButtonDetail.scss
+++ b/src/components/Buttons/ButtonDetail/ButtonDetail.scss
@@ -14,4 +14,15 @@
 
   color: #FFFFFF;
   background: #4099E5;
+
+  //disable text highlighting
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  @media screen and (max-width: 400px) {
+    width: 100%;
+  }
 }
