--- a/src/components/Buttons/ButtonDetail/ButtonDetailLarge.scss
+++ b/src/components/Buttons/ButtonDetail/ButtonDetailLarge.scss
@@ -7,11 +7,22 @@
   border-radius: 15px;
 
   font-family: 'Stolzl';
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 18px;
+  line-height: 20px;
   letter-spacing: 0.1em;
   text-decoration: none;
 
   color: #FFFFFF;
   background: #4099E5;
+
+  //disable text highlighting
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  @media screen and (max-width: 400px) {
+    width: 100%;
+  }
 }
