--- a/src/components/UserCard/UserCardLarge.scss
+++ b/src/components/UserCard/UserCardLarge.scss
@@ -11,6 +11,12 @@
     margin: 30px 0;
   }
 
+  @media screen and (max-width: 400px) {
+    width: 100%;
+    margin: 30px;
+    border-radius: 30%;
+  }
+
   .user-card__grey-block {
     position: absolute;
     width: 80px;
@@ -52,5 +58,10 @@
     position: absolute;
     left: calc(30% - 250px + 80px);
     bottom: 10%;
+
+    @media screen and (max-width: 600px) {
+      width: 200px;
+      left: 30%;
+    }
   }
 }
